[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/word_chain.gd" id="1_script"]

[node name="WordChain" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "WORD CHAIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CountdownLabel" type="Label" parent="VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer/TopRow"]
layout_mode = 2
custom_minimum_size = Vector2(20, 0)

[node name="ScoreLabel" type="Label" parent="VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Chains: 0 / 8"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="CurrentWordLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="HintLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="InputCenter" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InputField" type="LineEdit" parent="VBoxContainer/InputCenter"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 40)
placeholder_text = "Type a word..."
alignment = 1

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomSpacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
